--- a/src/views/Auth/Login/Login.module.scss
+++ b/src/views/Auth/Login/Login.module.scss
@@ -1,4 +1,9 @@
-@import "@/styles/colors.scss";
+@use "@/styles/colors.scss";
+
+$schema: (
+  primary: #0070f3,
+  secondary: #ff4081,
+);
 
 .login {
   display: flex;
@@ -6,5 +11,5 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: map-get($map: $schema, $key: primary);
+  background-color: map-get($schema, primary);
 }
